# OpenCL-SDK

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: presubmit.yml  release.yml
.gitlab/: stream-ci.yaml
.reuse/: dep5
cmake/: DebSourcePkg.cmake  Dependencies.cmake  OpenCLConfig.cmake  OpenCLConfigVersion.cmake  Package.cmake  PackageSetup.cmake
cmake/Dependencies/Freetype/: Freetype.cmake
cmake/Dependencies/GLEW/: CMakeLists.txt  GLEW.cmake
cmake/Dependencies/OpenGL/: OpenGL.cmake
cmake/Dependencies/SFML/: CMakeLists.txt  SFML.cmake
cmake/Dependencies/Stb/: Stb.cmake
cmake/Dependencies/TCLAP/: CMakeLists.txt  TCLAP.cmake
cmake/Dependencies/Vulkan/: Vulkan.cmake
cmake/Dependencies/X11/: X11.cmake
cmake/Dependencies/cargs/: CMakeLists.txt  cargs.cmake
cmake/Dependencies/clinfo/: CMakeLists.txt  clinfo.cmake  ext.h  patch.cmake
cmake/Dependencies/glfw/: glfw.cmake
cmake/Dependencies/glm/: glm.cmake
cmake/Dependencies/whereami/: whereami.cmake
cmake/Modules/: FindStb.cmake  FindTCLAP.cmake  Findcargs.cmake
docs/: README.md  RELEASE.md
docs/CMakeKernelLoad/: README.md
docs/CMakeKernelLoad/ConfigureFile/: CMakeLists.txt  ConfigureFile.cpp  KernelLocation.in.hpp  README.md
docs/CMakeKernelLoad/CwdRelative/: CMakeLists.txt  CwdRelative.cpp  README.md  saxpy.cl
docs/CMakeKernelLoad/Embed/: CMakeLists.txt  Embed.cpp  Kernel.in.hpp  README.md
docs/CMakeKernelLoad/Embed/cmake/: Embed.cmake
docs/CMakeKernelLoad/ExeRelative/: CMakeLists.txt  ExeRelative.cpp  PathToExe.cpp  PathToExe.hpp  README.md
docs/CMakeKernelLoad/PreprocessorDefine/: CMakeLists.txt  PreprocessorDefine.cpp  README.md
include/api/: CL
include/cpp/: CL
include/utils/: CL
lib/: CMakeLists.txt  README.md  SDK.md  Utils.md
lib/include/CL/SDK/: CLI.h  CLI.hpp  Context.h  Context.hpp  Image.h  Image.hpp  InteropContext.hpp  InteropWindow.hpp  OpenCLSDK_Config.in.h  Options.h  Options.hpp  Random.h  Random.hpp  SDK.h  SDK.hpp
lib/include/CL/Utils/: Context.h  Context.hpp  Detail.hpp  Device.hpp  Error.h  Error.hpp  ErrorCodes.h  Event.h  Event.hpp  File.h  File.hpp  InteropContext.hpp  InteropWindow.hpp  Platform.hpp  Utils.h  Utils.hpp  cargs.h
lib/src/Extensions/: .gitignore  CMakeLists.txt  LICENSE-MIT
lib/src/Extensions/scripts/: call_all.c.mako  gen_openclext.py  openclext.cpp.mako
lib/src/Extensions/src/: openclext.cpp
lib/src/Extensions/tests/: CMakeLists.txt  call_all.c  dx_sharing_prototypes.h  loader_info_prototypes.h  test_extension_loader.c  test_extension_loader.cpp
lib/src/SDK/: CLI.c  CLI.cpp  Context.c  Image.c  Image.cpp  InteropContext.cpp  InteropWindow.cpp  Random.c  SDK.c  SDK.cpp
lib/src/Utils/: Context.c  Context.cpp  Device.cpp  Error.c  Error.cpp  Event.c  File.c  File.cpp  Image.c  InteropContext.cpp  InteropWindow.cpp  Platform.cpp  Utils.c  Utils.cpp  cargs.c
python/: .test-conda-env.yml  README.md  setup.cfg  transpose.py
ruby/: README.md  rakefile
ruby/copybuffer/: copybuffer.rb
ruby/copybufferkernel/: copybufferkernel.rb
ruby/enumopencl/: enumopencl.rb
samples/: CMakeLists.txt
samples/core/: CMakeLists.txt
samples/core/1.2/enumopencl/: README.md  main.cpp
samples/core/binaries/: CMakeLists.txt  Collatz.cl  README.md  main.c  main.cpp
samples/core/blur/: CMakeLists.txt  README.md  blur.cl  blur.cpp  blur.hpp  default_image.h  image.c  main.c  main.cpp
samples/core/callback/: CMakeLists.txt  README.md  callback_sample_sequence.drawio  main.c  main.cpp  reaction_diffusion.cl
samples/core/copybuffer/: CMakeLists.txt  README.md  main.cpp
samples/core/copybufferkernel/: CMakeLists.txt  README.md  main.cpp
samples/core/enumopencl/: CMakeLists.txt  README.md  main.c  main.cpp
samples/core/multi-device/: CMakeLists.txt  README.md  convolution.cl  main.c  main.cpp
samples/core/reduce/: CMakeLists.txt  README.md  main.c  main.cpp  reduce.cl
samples/core/saxpy/: CMakeLists.txt  README.md  main.c  main.cpp  saxpy.cl
samples/extensions/: CMakeLists.txt
samples/extensions/khr/: CMakeLists.txt
samples/extensions/khr/conway/: CMakeLists.txt  README.md  conway.cl  conway.frag.glsl  conway.vert.glsl  main.cpp
samples/extensions/khr/externalmemory/: CMakeLists.txt  README.md  main.c  main.cpp  vulkan_utils.h  vulkan_utils.hpp
samples/extensions/khr/histogram/: CMakeLists.txt  README.md  histogram.cl  main.cpp
samples/extensions/khr/nbody/: CMakeLists.txt  README.md  main.cpp
samples/extensions/khr/ocean/: CMakeLists.txt  README.md  init_spectrum.cl  inversion.cl  main.cpp  normals.cl  ocean.cpp  ocean.frag.glsl  ocean.hpp  ocean.vert.glsl  ocean_util.hpp
samples/vulkan/: CMakeLists.txt
samples/vulkan/ocean/: CMakeLists.txt  README.md  fft_kernel.cl  init_spectrum.cl  inversion.cl  main.cpp  normals.cl  ocean.cpp  ocean.frag  ocean.frag.spv  ocean.hpp  ocean.vert  ocean.vert.spv  ocean_util.hpp  time_spectrum.cl  twiddle.cl
scripts/: check-format.sh  travis.sh
test/cmake/: platformenum.c  platformenum.cpp  useutil.c  useutil.cpp
test/cmake/findmodule/: CMakeLists.txt
test/cmake/pkgconfig/: CMakeLists.txt
test/cmake/pkgconfig/platformenum/: CMakeLists.txt
test/cmake/pkgconfig/useutil/: CMakeLists.txt
utils/: CMakeLists.txt
utils/include/CL/SDK/: CLI.hpp  Detail.hpp  Error.hpp  Options.hpp  Utils.h  Utils.hpp
utils/src/: SDKUtils.cpp
